[package]
name = "coalescence"
version = "0.1.0"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partitions = "0.2.4"
preexplorer = "0.1.1"
itertools = "0.9.0"
itertools-num = "0.1.3"
markovian = "0.1.1"
rand = "0.7.3"
rand_distr = "0.2.2"
